--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.mycompany.geetfit</string>
+	<string>com.uricsc305.geetfit</string>
 	<key>PROJECT_ID</key>
 	<string>geet-fit-8oj3z6</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:474957155325:ios:03157cfda242cfbb7fa794</string>
+	<string>1:474957155325:ios:310bebd7fcb45ac77fa794</string>
 </dict>
 </plist>
