--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -34,6 +34,9 @@ dependencies:
   cloud_firestore: 5.5.0
   cloud_firestore_platform_interface: 6.5.0
   cloud_firestore_web: 4.3.4
+  cloud_functions: 5.1.5
+  cloud_functions_platform_interface: 5.5.39
+  cloud_functions_web: 4.10.4
   collection: 1.19.0
   csslib: 0.17.3
   easy_debounce: 2.0.1
@@ -57,6 +60,7 @@ dependencies:
   firebase_storage: 12.3.2
   firebase_storage_platform_interface: 5.1.33
   firebase_storage_web: 3.10.5
+  firebase_vertexai: 1.0.1
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.4.1
   flutter_plugin_android_lifecycle: 2.0.20
@@ -64,6 +68,7 @@ dependencies:
   from_css_color: 2.0.0
   go_router: 12.1.3
   google_fonts: 6.1.0
+  google_mobile_ads: 5.1.0
   google_sign_in: 6.2.1
   google_sign_in_android: 6.1.30
   google_sign_in_ios: 5.7.7
@@ -90,7 +95,6 @@ dependencies:
   path_provider_linux: 2.2.1
   path_provider_platform_interface: 2.1.2
   path_provider_windows: 2.3.0
-  percent_indicator: 4.2.2
   plugin_platform_interface: 2.1.8
   provider: 6.1.2
   rxdart: 0.27.7
@@ -172,6 +176,7 @@ flutter:
     - assets/pdfs/
     - assets/jsons/
 
+    - assets/environment_values/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
